--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,24 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
+<div class="container-fluid header py-3 py-lg-4">
+  <div class="row align-items-center">
+    <div class="col-12 text-center col-lg-6 text-lg-left">
+      <h1>El Paso, Texas COVID-19 Tracker</h1>
+    </div>
+    <div class="col-12 text-center col-lg-6 text-lg-right last-updated">
+      Last Updated: March 31 4:52 PM <em>(<%= time_ago_in_words(Time.now - 2.hours) %> ago)</em>
+    </div>
+  </div>
+</div>
 
-<% high_chart_globals(@chart_globals) %>
-<%= high_chart("some_id", @chart) %>
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
+      <h2>Total Cases by Day</h2>
+      <%= high_chart_globals(@chart_globals) %>
+      <%= high_chart("total_cases_by_day", @total_cases_by_day) %>
+    </div>
+  </div>
+</div>
+
+
+
+
