--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EpCovidTracker</title>
+    <title>El Paso, Texas COVID-19 Tracker</title>
+      
+    <meta charset="UTF-8">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
