--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,11 +2,22 @@
 
 <div class="container-fluid header py-3 py-lg-4">
   <div class="row align-items-center">
-    <div class="col-12 text-center col-lg-6 text-lg-left">
+    <div class="col-12 text-center col-lg-9 text-lg-left mb-3 mb-lg-0">
       <h1>El Paso, Texas COVID-19 Tracker</h1>
+      <p>Last Updated: March 31 4:52 PM <em>(<%= time_ago_in_words(Time.now - 2.hours) %> ago)</em></p>
     </div>
-    <div class="col-12 text-center col-lg-6 text-lg-right last-updated">
-      Last Updated: March 31 4:52 PM <em>(<%= time_ago_in_words(Time.now - 2.hours) %> ago)</em>
+    <div class="col-12 text-center col-lg-3 text-lg-right total-cases">
+      <span class="counter">46</span>
+      <p>Total Cases</p>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid mb-5">
+  <div class="row">
+    <div class="col alert text-center">
+      <h2>Stay Home, Work Safe</h2>
+      <p>El Paso residents are temporarily directed to stay home, and businesses are temporarily required to cease activity. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
     </div>
   </div>
 </div>
@@ -23,14 +34,34 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
-      <h2>Total Cases by Age Range</h2>
+      <h3>Total Cases by Age Range</h3>
       <%= high_chart("total_cases_by_age_range", @total_cases_by_age_range) %>
     </div>
     <div class="col-lg-6">
-      <h2>Total Cases by Gender</h2>
+      <h3>Total Cases by Gender</h3>
       <%= high_chart("total_cases_by_gender", @total_cases_by_gender) %>
+    </div>
+    <hr>
+  </div>
+</div>
+
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
+      <h4>Sources</h4>
+      <ul>
+        <li><%= link_to "City of El Paso Department of Public Health - March 30, 2020", "http://www.elpasotexas.gov/~/media/files/coep/public%20health/coronavirus/033020news%20release%20%20el%20paso%20identifies%20additional%20covid19%20cases.ashx" %></li>
+        <li><%= link_to "El Paso Matters - March 30, 2020", "https://elpasomatters.org/2020/03/30/el-paso-has-begun-showing-general-location-of-covid-19-positive-tests/" %></li>
+      </ul>
     </div>
   </div>
 </div>
 
-
+<div class="container-fluid footer py-2 py-lg-3">
+  <div class="row align-items-center">
+    <div class="col-12 text-center text-lg-right">
+      Not Affiliated with the <%= link_to "City of El Paso", "https://www.elpasotexas.gov" %> or the <%= link_to "City of El Paso Department of Public Health", "https://www.google.com/search?q=City+of+El+Paso+Department+of+Public+Health" %><br>
+      Site by <%= link_to "Brandon Silverstein", "https://twitter.com/thebsilverstein" %>
+    </div>
+  </div>
+</div>
