--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,27 @@
     <title>El Paso, Texas COVID-19 Tracker</title>
       
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="description" content="A simple dashboard that displays the latest COVID-19 statistics in El Paso, Texas."/>
+    <meta property="og:title" content="El Paso, Texas COVID-19 Tracker"/>
+    <meta property="og:image" content="<%= asset_url('og_image.png') %>"/>
+    <meta property="og:description" content="A simple dashboard that displays the latest COVID-19 statistics in El Paso, Texas."/>
+    <meta property='og:url' content="<%= request.url %>"/>
+
+    <% if Rails.env.production? %>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162435156-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-162435156-1');
+      </script>
+
+
+    <% end %>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
