--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,11 +24,14 @@ body {
 .header {
   h1 {
     font-weight: 800;
-    font-size: 1.7em;
+    font-size: 1.6em;
     letter-spacing: -0.045em;
     line-height: 1.1em;
     padding: 0;
     margin: 0;
+    @media (min-width: 450px) {
+      font-size: 1.7em;
+    }
     @media (min-width: 600px) {
       font-size: 2.2em;
     }
