--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="description" content="A simple dashboard that displays the latest COVID-19 statistics in El Paso, Texas."/>
+    <meta property="description" content="A simple dashboard that displays the latest COVID-19 statistics for El Paso, Texas."/>
     <meta property="og:title" content="El Paso, Texas COVID-19 Tracker"/>
     <meta property="og:image" content="<%= asset_url('og_image.png') %>"/>
-    <meta property="og:description" content="A simple dashboard that displays the latest COVID-19 statistics in El Paso, Texas."/>
+    <meta property="og:description" content="A simple dashboard that displays the latest COVID-19 statistics for El Paso, Texas."/>
     <meta property='og:url' content="<%= request.url %>"/>
 
     <% if Rails.env.production? %>
