--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -60,7 +60,7 @@
 <div class="container-fluid footer py-3">
   <div class="row align-items-center">
     <div class="col-12 text-center text-lg-right">
-      Not Affiliated with the <%= link_to "City of El Paso", "https://www.elpasotexas.gov" %> or the <%= link_to "City of El Paso Department of Public Health", "https://www.google.com/search?q=City+of+El+Paso+Department+of+Public+Health" %>
+      Not Affiliated with the <%= link_to "City of El Paso", "https://www.elpasotexas.gov" %> or the <%= link_to "City of El Paso Department of Public Health", "http://www.elpasotexas.gov/public-health" %>
       <div class="mt-2">
         Site by <%= link_to "Brandon Silverstein", "https://twitter.com/thebsilverstein" %>
       </div>
