--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -50,8 +50,7 @@
     <div class="col">
       <h4>Sources</h4>
       <ul>
-        <li><%= link_to "City of El Paso Department of Public Health - March 30, 2020", "http://www.elpasotexas.gov/~/media/files/coep/public%20health/coronavirus/033020news%20release%20%20el%20paso%20identifies%20additional%20covid19%20cases.ashx" %></li>
-        <li><%= link_to "El Paso Matters - March 30, 2020", "https://elpasomatters.org/2020/03/30/el-paso-has-begun-showing-general-location-of-covid-19-positive-tests/" %></li>
+        <li><%= link_to "City of El Paso Facebook - March 31, 2020", "https://www.facebook.com/notes/city-of-el-paso-texas-municipal-government/covid-19-update-el-paso-identifies-additional-covid-19-cases/2916368208402603/" %></li>
       </ul>
     </div>
   </div>
