--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row align-items-center">
     <div class="col-12 text-center col-lg-9 text-lg-left mb-3 mb-lg-0">
       <h1>El Paso, Texas COVID-19 Tracker</h1>
-      <p>Last Updated: <%= @last_updated_on.strftime("%B %e %I:%M") %> MDT <em>(<%= time_ago_in_words(@last_updated_on) %> ago)</em></p>
+      <p>Last Updated: <%= @last_updated_on.strftime("%B %e %I:%M %P") %> MDT <em>(<%= time_ago_in_words(@last_updated_on) %> ago)</em></p>
     </div>
     <div class="col-12 text-center col-lg-3 text-lg-right total-cases">
       <span class="counter">50</span>
