--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,10 +4,10 @@
   <div class="row align-items-center">
     <div class="col-12 text-center col-lg-9 text-lg-left mb-3 mb-lg-0">
       <h1>El Paso, Texas COVID-19 Tracker</h1>
-      <p>Last Updated: <%= @last_updated_on.strftime("%B %e %I:%M %P") %> MDT <em>(<%= time_ago_in_words(@last_updated_on) %> ago)</em></p>
+      <p>Last Updated: <%= @last_updated_on.strftime("%B %e %l:%M %p") %> MDT <em>(<%= time_ago_in_words(@last_updated_on) %> ago)</em></p>
     </div>
     <div class="col-12 text-center col-lg-3 text-lg-right total-cases">
-      <span class="counter">50</span>
+      <span class="counter"><%= @total_cases %></span>
       <p>Total Cases</p>
     </div>
   </div>
@@ -33,6 +33,31 @@
 
 <div class="container my-5">
   <div class="row">
+    <div class="col">
+      <h3>Total Cases by Zip Code</h3>
+      
+      <table class="table table-borderless table-sm text-center mt-3">
+        <thead class="thead-dark">
+          <tr>
+            <th>Zip Code</th>
+            <th>Total Cases</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for point in @total_cases_by_zip_code %>
+            <tr>
+              <td><%= point[0] %></td>
+              <td><%= point[1] %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<div class="container my-5">
+  <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
       <h3>Total Cases by Age Range</h3>
       <%= high_chart("total_cases_by_age_range", @total_cases_by_age_range) %>
@@ -51,6 +76,7 @@
       <h4>Sources</h4>
       <ul>
         <li><%= link_to "City of El Paso Facebook - March 31, 2020", "https://www.facebook.com/notes/city-of-el-paso-texas-municipal-government/covid-19-update-el-paso-identifies-additional-covid-19-cases/2916368208402603/" %></li>
+        <li><%= link_to "El Paso Matters - March 30, 2020", "https://elpasomatters.org/2020/03/30/el-paso-has-begun-showing-general-location-of-covid-19-positive-tests/" %></li>
       </ul>
     </div>
   </div>
