--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,6 +128,18 @@ p {
   }
 }
 
+th, td {
+  font-size: 0.9em;
+}
+
+th {
+  background: rgba(0,0,0,0.05);
+}
+
+tr:nth-child(even) {
+  background: rgba(0,0,0,0.05);
+}
+
 .footer {
   background: #111;
   color: #888888;
