--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -31,9 +31,10 @@
   </div>
 </div>
 
+
 <div class="container my-5">
   <div class="row">
-    <div class="col">
+    <div class="col-lg-6 mb-5 mb-lg-0">
       <h3>Total Cases by Zip Code</h3>
       
       <table class="table table-borderless table-sm text-center mt-3">
@@ -52,6 +53,10 @@
           <% end %>
         </tbody>
       </table>
+    </div>
+    <div class="col-lg-6">
+      <h3>Total Cases and Total Patients Tested by Day</h3>
+      <%= high_chart("total_cases_and_tests_by_day", @total_cases_and_tests_by_day) %>
     </div>
   </div>
 </div>
