--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -78,7 +78,18 @@
 <div class="container my-5">
   <div class="row">
     <div class="col">
-      <h4>Sources</h4>
+      <h4>Helpful Resources</h4>
+      <ul>
+        <li><%= link_to "City of El Paso - COVID-19 Information & Resources", "http://epstrong.org" %></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
+      <h4>Data Sources</h4>
       <ul>
         <li><%= link_to "City of El Paso Facebook - March 31, 2020", "https://www.facebook.com/notes/city-of-el-paso-texas-municipal-government/covid-19-update-el-paso-identifies-additional-covid-19-cases/2916368208402603/" %></li>
         <li><%= link_to "El Paso Matters - March 30, 2020", "https://elpasomatters.org/2020/03/30/el-paso-has-begun-showing-general-location-of-covid-19-positive-tests/" %></li>
