--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,6 +77,9 @@ h3 {
   letter-spacing: -0.045em;
   line-height: 1.1em;
   text-align: center;
+  .chart-individual-zip-code & {
+    font-size: 1.1em;
+  }
 }
 
 h4 {
