--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,20 +12,6 @@
     <meta property="og:description" content="A simple dashboard that displays the latest COVID-19 statistics for El Paso, Texas."/>
     <meta property='og:url' content="<%= request.url %>"/>
 
-    <% if Rails.env.production? %>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162435156-1"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-162435156-1');
-      </script>
-
-
-    <% end %>
-
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -36,5 +22,12 @@
 
   <body>
     <%= yield %>
+
+    <% if Rails.env.production? %>
+
+      <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script> 
+      <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+
+    <% end %>
   </body>
 </html>
