--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col col-md-10 offset-md-1">
             <h2><%= @last_updated_on.strftime("%A, %B %e") %>: <%= pluralize @new_cases, "New Case" %></h2>
-            <p>Stay home, work safe. Public and private gatherings of any kind are prohibited. All parks and recreational areas are closed to the public and off limits. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
+            <p>Stay home, work safe. Health officials implore the community to stay home as the number of cases are expected to accelerate dramatically over the next several weeks. Public and private gatherings of any kind are prohibited. All parks and recreational areas are closed to the public and off limits. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
           </div>
         </div>
       </div>
