--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>El Paso, Texas COVID-19 Tracker</title>
+    <title>El Paso, Texas COVID-19 Tracker - Dashboard for El Paso, Texas COVID-19 Data</title>
       
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="description" content="A simple dashboard that displays the latest COVID-19 statistics for El Paso, Texas."/>
+    <meta name="description" content="A simple dashboard that displays the latest COVID-19 case data and statistics for El Paso, Texas."/>
+
     <meta property="og:title" content="El Paso, Texas COVID-19 Tracker"/>
     <meta property="og:image" content="<%= asset_url('og_image.png') %>"/>
     <meta property="og:description" content="A simple dashboard that displays the latest COVID-19 statistics for El Paso, Texas."/>
     <meta property='og:url' content="<%= request.url %>"/>
+    <link href="<%= request.url %>" rel="canonical">
 
     <% if Rails.env.production? %>
       <!-- Global site tag (gtag.js) - Google Analytics -->
