--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>El Paso, Texas COVID-19 Tracker - Dashboard for El Paso, Texas COVID-19 Data</title>
+    <title>El Paso, Texas COVID-19 Tracker - Dashboard for El Paso, Texas COVID-19 Stats</title>
       
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
