--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -94,6 +94,7 @@
       <h4>Helpful Resources</h4>
       <ul>
         <li><%= link_to "City of El Paso - COVID-19 Information & Resources", "http://epstrong.org" %></li>
+        <li><%= link_to "Paso del Norte Health Foundation - EP COVID-19 Information Hub", "http://epcovid19.org" %></li>
       </ul>
     </div>
   </div>
