--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,6 +60,9 @@ body {
     display: block;
     font-size: 2.8em;
     line-height: 1.0em;
+    &.deaths {
+      color: #f70000;
+    }
   }
 }
 
