--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -53,6 +53,15 @@
 
 <div class="container my-5">
   <div class="row">
+    <div class="col">
+      <h2>Total Deaths by Day</h2>
+      <%= high_chart("total_deaths_by_day", @total_deaths_by_day) %>
+    </div>
+  </div>
+</div>
+
+<div class="container my-5">
+  <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
       <h3>Total Cases by Age Range</h3>
       <%= high_chart("total_cases_by_age_range", @total_cases_by_age_range) %>
