--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -63,7 +63,7 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
-      <h3>Total Cases by Age Range</h3>
+      <h3>Total Cases & Deaths by Age Range</h3>
       <%= high_chart("total_cases_by_age_range", @total_cases_by_age_range) %>
     </div>
     <div class="col-lg-6">
