--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -6,7 +6,7 @@
       <h1>El Paso, Texas COVID-19 Tracker</h1>
       <p>Last Updated: <%= @last_updated_on.strftime("%B %e at %l:%M %p") %> MDT <em>(<%= time_ago_in_words(@last_updated_on) %> ago)</em></p>
     </div>
-    <div class="col-lg-3 text-center text-lg-right total-cases">
+    <div class="col-lg-3 text-center total-cases">
       
       <div class="container">
         <div class="row">
