--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -54,6 +54,15 @@
 <div class="container my-5">
   <div class="row">
     <div class="col">
+      <h2>New Cases by Day</h2>
+      <%= high_chart("new_cases_by_day", @new_cases_by_day) %>
+    </div>
+  </div>
+</div>
+
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
       <h2>Total Deaths by Day</h2>
       <%= high_chart("total_deaths_by_day", @total_deaths_by_day) %>
     </div>
