--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
             <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize @new_cases, "New Coronavirus Case" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
-            <p>Face covering use is encouraged for all residents. Health officials implore the community to stay home as the number of cases are expected to accelerate dramatically over the next several weeks. Public and private gatherings are strictly prohibited. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
+            <p>Stay Home, Work Safe orders have been extended through May 17 and residents are directed to stay home and only go out for essential business. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
           </div>
         </div>
       </div>
