--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -66,7 +66,7 @@
       <h3>Total Deaths by Day</h3>
       <%= high_chart("total_deaths_by_day", @total_deaths_by_day) %>
     </div>
-    <div class="col-lg-6 mb-5 mb-lg-0">
+    <div class="col-lg-6">
       <h3>Total Cases & Deaths by Age Range</h3>
       <%= high_chart("total_cases_by_age_range", @total_cases_by_age_range) %>
     </div>
@@ -79,7 +79,7 @@
       <h3>Total Cases by Gender</h3>
       <%= high_chart("total_cases_by_gender", @total_cases_by_gender) %>
     </div>
-    <div class="col-lg-6 mb-5 mb-lg-0">
+    <div class="col-lg-6">
       <h3>Patients in ICU</h3>
       <%= high_chart("patients_in_icu", @patients_in_icu) %>
     </div>
