--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
             <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize @new_cases, "New Coronavirus Case" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
-            <p class="text-center">El Paso County residents are now required to wear face coverings in public. All public and private gatherings of any number of people occurring outside or inside a single household or dwelling unit are prohibited. <%= link_to "Read More", "https://www.facebook.com/notes/city-of-el-paso-texas-municipal-government/emergency-directives-amended-aimed-at-reducing-spread-of-covid-19/2969708026401954/" %></p>
+            <p class="text-center">El Paso County residents are now required to wear face coverings in public. All public and private gatherings of any number of people occurring outside or inside a single household or dwelling unit are prohibited. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
           </div>
         </div>
       </div>
