--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
             <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize @new_cases, "New Coronavirus Case" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
-            <p class="text-center">El Paso County residents are now required to wear face coverings in public. All public and private gatherings of any number of people occurring outside or inside a single household or dwelling unit are prohibited. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
+            <p class="text-center">El Paso County residents are now required to wear face coverings in public. The City of El Paso is reviewing the state’s phased plan to reopen Texas. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
           </div>
         </div>
       </div>
@@ -45,7 +45,7 @@
 <div class="container my-5">
   <div class="row">
     <div class="col">
-      <h2>Total Cases by Day</h2>
+      <h2>Total Cases and Recoveries by Day</h2>
       <%= high_chart("total_cases_by_day", @total_cases_by_day) %>
     </div>
   </div>
