--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
             <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize @new_cases, "New Coronavirus Case" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
-            <p class="text-center">El Paso County residents are now required to wear face coverings in public. The City of El Paso is reviewing the state’s phased plan to reopen Texas. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
+            <p class="text-center">City and County officials are in the process of amending the current Local Emergency Directive in response to Governor Abbott’s Executive Orders issued on April 27 calling to re-open the Texas economy. The amended directive will go into effect on Friday, May 1 at 12:01 a.m. and will incrementally start to re-open the economy. <%= link_to "Read More", "http://epstrong.org/faqs.php" %></p>
           </div>
         </div>
       </div>
