--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,21 +2,25 @@
 
 <div class="container-fluid header py-3 py-lg-4">
   <div class="row align-items-center">
-    <div class="col-lg-9 text-center text-lg-left mb-3 mb-lg-0">
+    <div class="col-lg-7 text-center text-lg-left mb-3 mb-lg-0">
       <h1>El Paso, Texas COVID-19 Tracker</h1>
       <p>Last Updated: <%= @last_updated_on.strftime("%B %e at %l:%M %p") %> MDT <em>(<%= time_ago_in_words(@last_updated_on) %> ago)</em></p>
     </div>
-    <div class="col-lg-3 text-center total-cases">
+    <div class="col-lg-5 text-center total-cases">
       
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-4">
             <span class="counter"><%= @total_cases %></span>
             <p>Total Cases</p>
           </div>
-          <div class="col-6">
+          <div class="col-4">
             <span class="counter deaths"><%= @total_deaths %></span>
             <p>Total Deaths</p>
+          </div>
+          <div class="col-4">
+            <span class="counter recoveries"><%= @total_recoveries %></span>
+            <p>Total Recoveries</p>
           </div>
         </div>
       </div>
