--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -80,14 +80,23 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
-      <h3>Total Cases by Gender</h3>
-      <%= high_chart("total_cases_by_gender", @total_cases_by_gender) %>
+      <h3>Patients Hospitalized</h3>
+      <%= high_chart("patients_hospitalized", @patients_hospitalized) %>
     </div>
     <div class="col-lg-6">
       <h3>Patients in ICU</h3>
       <%= high_chart("patients_in_icu", @patients_in_icu) %>
     </div>
     <hr>
+  </div>
+</div>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-6 mb-5 mb-lg-0">
+      <h3>Total Cases by Gender</h3>
+      <%= high_chart("total_cases_by_gender", @total_cases_by_gender) %>
+    </div>
   </div>
 </div>
 
