--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -46,7 +46,7 @@
   </div>
 </div>
 
-<div class="container my-5">
+<div class="container mb-5">
   <div class="row">
     <div class="col">
       <h2>Total Cases and Recoveries by Day</h2>
@@ -55,9 +55,9 @@
   </div>
 </div>
 
-<div class="container my-5">
+<div class="container mb-5">
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-6 mb-5 mb-lg-0">
       <h2>New Cases by Day</h2>
       <%= high_chart("new_cases_by_day", @new_cases_by_day) %>
     </div>
@@ -68,7 +68,7 @@
   </div>
 </div>
 
-<div class="container my-5">
+<div class="container mb-5">
   <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
       <h3>Patients Hospitalized</h3>
@@ -82,7 +82,7 @@
   </div>
 </div>
 
-<div class="container my-5">
+<div class="container mb-5">
   <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
       <h3>Total Deaths by Day</h3>
@@ -95,7 +95,7 @@
   </div>
 </div>
 
-<div class="container my-5">
+<div class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-lg-6 mb-5 mb-lg-0">
       <h3>Total Cases by Gender</h3>
@@ -105,7 +105,7 @@
 </div>
 
 
-<div class="container my-5">
+<div class="container mb-5">
   <div class="row">
     <div class="col">
       <h3>Total Cases by Zip Code</h3>
@@ -139,7 +139,7 @@
   </div>
 </div>
 
-<div class="container my-5">
+<div class="container mb-5">
   <div class="row">
     <div class="col">
       <h4>Helpful Resources</h4>
@@ -151,7 +151,7 @@
   </div>
 </div>
 
-<div class="container my-5">
+<div class="container mb-5">
   <div class="row">
     <div class="col">
       <h4>Data Sources</h4>
