--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -171,3 +171,7 @@ tr:nth-child(even) {
 table.dataTable.table-sm .sorting::before, table.dataTable.table-sm .sorting_asc::before, table.dataTable.table-sm .sorting_desc::before {
   right: 1.35em;
 }
+
+.btn-sm {
+  font-size: 0.7em;
+}
