--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -48,9 +48,22 @@
 
 <div class="container mb-5">
   <div class="row">
-    <div class="col">
+    <div class="col-12 mb-2">
       <h2>Total Cases and Recoveries by Day</h2>
+    </div>
+    <div class="col-12 mb-3 text-center">
+      <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-outline-secondary btn-sm active">
+          <input type="radio" name="options" id="option1" value="total_cases_by_day" checked> Linear
+        </label>
+        <label class="btn btn-outline-secondary btn-sm">
+          <input type="radio" name="options" id="option2" value="total_cases_by_day_logarithmic"> Logarithmic
+        </label>
+      </div>
+    </div>
+    <div class="col-12">
       <%= high_chart("total_cases_by_day", @total_cases_by_day) %>
+      <%= high_chart("total_cases_by_day_logarithmic", @total_cases_by_day_logarithmic) %>
     </div>
   </div>
 </div>
