--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -69,11 +69,11 @@
 <div class="container mb-5">
   <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
-      <h2>New Cases by Day</h2>
+      <h3>New Cases by Day</h3>
       <%= high_chart("new_cases_by_day", @new_cases_by_day) %>
     </div>
     <div class="col-lg-6">
-      <h2>New Recoveries by Day</h2>
+      <h3>New Recoveries by Day</h3>
       <%= high_chart("new_recoveries_by_day", @new_recoveries_by_day) %>
     </div>
   </div>
@@ -89,7 +89,6 @@
       <h3>Patients in ICU</h3>
       <%= high_chart("patients_in_icu", @patients_in_icu) %>
     </div>
-    <hr>
   </div>
 </div>
 
@@ -111,8 +110,8 @@
       <%= high_chart("total_deaths_by_day_logarithmic", @total_deaths_by_day_logarithmic) %>
     </div>
     <div class="col-lg-6">
-      <h3>Total Cases & Deaths by Age Range</h3>
-      <%= high_chart("total_cases_by_age_range", @total_cases_by_age_range) %>
+      <h3>New Deaths by Day</h3>
+      <%= high_chart("new_deaths_by_day", @new_deaths_by_day) %>
     </div>
   </div>
 </div>
@@ -120,6 +119,10 @@
 <div class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-lg-6 mb-5 mb-lg-0">
+      <h3>Total Cases & Deaths by Age Range</h3>
+      <%= high_chart("total_cases_by_age_range", @total_cases_by_age_range) %>
+    </div>
+    <div class="col-lg-6">
       <h3>Total Cases by Gender</h3>
       <%= high_chart("total_cases_by_gender", @total_cases_by_gender) %>
     </div>
