--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -60,8 +60,15 @@
         </label>
       </div>
 
-      <%= high_chart("total_cases_by_day", @total_cases_by_day) %>
-      <%= high_chart("total_cases_by_day_logarithmic", @total_cases_by_day_logarithmic) %>
+      <div class="row">
+        <div class="col-12" id="chart_total_cases_by_day">
+          <%= high_chart("total_cases_by_day", @total_cases_by_day) %>
+        </div>
+        <div class="col-12" id="chart_total_cases_by_day_logarithmic">
+          <%= high_chart("total_cases_by_day_logarithmic", @total_cases_by_day_logarithmic) %>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -84,17 +91,25 @@
     <div class="col-lg-6 mb-5 mb-lg-0">
       <h3>Total Deaths by Day</h3>
       <div class="col-12 mb-3 text-center">
-      <div class="btn-group btn-group-toggle" data-toggle="buttons">
-        <label class="btn btn-outline-secondary btn-sm active">
-          <input type="radio" name="total_deaths_by_day_options" id="option1" value="total_deaths_by_day" checked> Linear
-        </label>
-        <label class="btn btn-outline-secondary btn-sm">
-          <input type="radio" name="total_deaths_by_day_options" id="option2" value="total_deaths_by_day_logarithmic"> Logarithmic
-        </label>
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <label class="btn btn-outline-secondary btn-sm active">
+            <input type="radio" name="total_deaths_by_day_options" id="option1" value="total_deaths_by_day" checked> Linear
+          </label>
+          <label class="btn btn-outline-secondary btn-sm">
+            <input type="radio" name="total_deaths_by_day_options" id="option2" value="total_deaths_by_day_logarithmic"> Logarithmic
+          </label>
+        </div>
+
+        <div class="row">
+          <div class="col-12" id="chart_total_deaths_by_day">
+            <%= high_chart("total_deaths_by_day", @total_deaths_by_day) %>
+          </div>
+          <div class="col-12" id="chart_total_deaths_by_day_logarithmic">
+            <%= high_chart("total_deaths_by_day_logarithmic", @total_deaths_by_day_logarithmic) %>
+          </div>
+        </div>
+        
       </div>
-    </div>
-      <%= high_chart("total_deaths_by_day", @total_deaths_by_day) %>
-      <%= high_chart("total_deaths_by_day_logarithmic", @total_deaths_by_day_logarithmic) %>
     </div>
     <div class="col-lg-6">
       <h3>New Deaths by Day</h3>
