--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,15 +29,31 @@
   </div>
 </div>
 
-<div class="container-fluid mb-5">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-12 alert text-center">
+    <div class="col-12 alert mb-0 text-center">
 
       <div class="container">
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
             <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize @new_cases, "New Coronavirus Case" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
             <p class="text-center">Testing is available to members of the community with or without COVID-19 symptoms. <%= link_to "Read More", "http://epstrong.org/testing.php" %></p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid mb-3">
+  <div class="row">
+    <div class="col-12 alert alert-notice text-center">
+
+      <div class="container">
+        <div class="row">
+          <div class="col col-md-10 offset-md-1 text-left">
+            <p class="text-center">The city of El Paso has updated their schedule for releasing data.<br>This website will be updated in the morning with overall data and in the afternoon with zip code specific data.</p>
           </div>
         </div>
       </div>
