--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
-            <p class="text-center">The city of El Paso has updated their schedule for releasing data.<br>This website will be updated in the morning with overall data and in the afternoon with zip code specific data.</p>
+            <p class="text-center">The city of El Paso has updated their schedule for releasing data. This website will be updated in the morning with overall data and in the afternoon with zip code specific data.</p>
           </div>
         </div>
       </div>
