--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -46,7 +46,7 @@
   </div>
 </div>
 
-<div class="container-fluid mb-3">
+<!-- <div class="container-fluid mb-3">
   <div class="row">
     <div class="col-12 alert alert-notice text-center">
 
@@ -60,7 +60,7 @@
 
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="container mb-5">
   <div class="row">
