--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid mb-4">
   <div class="row">
     <div class="col-12 alert mb-0 text-center">
 
