--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -37,7 +37,7 @@
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
             <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize @new_cases, "New Coronavirus Case" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
-            <p class="text-center">Testing is available to members of the community with or without COVID-19 symptoms. <%= link_to "Read More", "http://epstrong.org/testing.php" %></p>
+            <p class="text-center">Business customers and business workers are now required to wear face coverings. <%= link_to "Read More", "http://epstrong.org/health-orders.php" %></p>
           </div>
         </div>
       </div>
