--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -104,6 +104,15 @@
 
 <div class="container mb-5">
   <div class="row">
+    <div class="col-lg-12 mb-5 mb-lg-0">
+      <h3>Active Cases by Day</h3>
+      <%= high_chart("active_cases_by_day", @active_cases_by_day) %>
+    </div>
+  </div>
+</div>
+
+<div class="container mb-5">
+  <div class="row">
     <div class="col-lg-6 mb-5 mb-lg-0">
       <h3>Total Deaths by Day</h3>
       <div class="col-12 mb-3 text-center">
