--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,6 +29,22 @@
   </div>
 </div>
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 alert alert-notice text-center mb-0">
+
+      <div class="container">
+        <div class="row">
+          <div class="col col-md-8 offset-md-2 text-left">
+            <p class="text-center"><strong>As of 8:45 am on Sunday, July 5, the city has not released their daily COVID-19 data. This website will be updated as soon as the city releases new data.</strong></p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 <div class="container-fluid mb-4">
   <div class="row">
     <div class="col-12 alert mb-0 text-center">
@@ -45,22 +61,6 @@
     </div>
   </div>
 </div>
-
-<!-- <div class="container-fluid mb-3">
-  <div class="row">
-    <div class="col-12 alert alert-notice text-center">
-
-      <div class="container">
-        <div class="row">
-          <div class="col col-md-10 offset-md-1 text-left">
-            <p class="text-center">The city of El Paso has updated their schedule for releasing data. This website will be updated in the morning with overall data and by the afternoon with zip code specific data.</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div> -->
 
 <div class="container mb-5">
   <div class="row">
