--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,23 +51,33 @@ body {
   text-transform: uppercase;
   p {
     padding: 0;
-    margin: 0;
+    margin: 6px 0 0 0;
     font-size: 0.7em;
     @media(min-width: 500px) {
       font-size: 0.9em;
+      line-height: 1.2em;
     }
   }
   span {
     color: #fed907;
     font-weight: 800;
     display: block;
-    font-size: 2.3em;
+    font-size: 2.1em;
     line-height: 1.0em;
     &.deaths {
       color: #f70000;
     }
     &.recoveries {
       color: #26dc4e;
+    }
+    @media(min-width: 600px) {
+      font-size: 2.2em;
+    }
+    @media(min-width: 992px) {
+      font-size: 1.9em;
+    }
+    @media(min-width: 1100px) {
+      font-size: 2.2em;
     }
   }
 }
