--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,21 +29,21 @@
   </div>
 </div>
 
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div class="col-12 alert alert-notice text-center mb-0">
 
       <div class="container">
         <div class="row">
           <div class="col col-md-8 offset-md-2 text-left">
-            <p class="text-center"><strong>As of 10:00 AM on Sunday, July 5, the city has not released their daily COVID-19 data. This website will be updated as soon as the city releases new data.</strong></p>
+            <p class="text-center">On Tuesday, August 11, the City of El Paso reported 215 new COVID-19 cases. The State of Texas reported 325 delayed positive test results. <strong>Total cases</strong> increased by 540, but <strong>daily new cases</strong> only increased by 215. The website has been updated to reflect this change.</p>
           </div>
         </div>
       </div>
 
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="container-fluid mb-4">
   <div class="row">
