--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,21 +29,21 @@
   </div>
 </div>
 
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div class="col-12 alert alert-notice text-center mb-0">
 
       <div class="container">
         <div class="row">
           <div class="col col-md-8 offset-md-2 text-left">
-            <p class="text-center">On Tuesday, August 11, the City of El Paso reported 215 new COVID-19 cases. The State of Texas reported 325 delayed positive test results. <strong>Total cases</strong> increased by 540, but <strong>daily new cases</strong> only increased by 215. The website has been updated to reflect this change.</p>
+            <p class="text-center">On Saturday, August 15, the City of El Paso reported 91 new COVID-19 cases. 356 delayed positive test results seem to have been added to total cases, possibly reported by the State of Texas. <strong>Total cases</strong> increased by 447, but <strong>daily new cases</strong> only increased by 91. Please check back later today for confirmation on these numbers.</p>
           </div>
         </div>
       </div>
 
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="container-fluid mb-4">
   <div class="row">
