--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -36,7 +36,7 @@
       <div class="container">
         <div class="row">
           <div class="col col-md-8 offset-md-2 text-left">
-            <p class="text-center">On Saturday, August 15, the City of El Paso reported 91 new COVID-19 cases. 356 delayed positive test results seem to have been added to total cases, possibly reported by the State of Texas. <strong>Total cases</strong> increased by 447, but <strong>daily new cases</strong> only increased by 91. Please check back later today for confirmation on these numbers.</p>
+            <p class="text-center">On Saturday, August 15, the City of El Paso reported 91 new COVID-19 cases. The State of Texas reported 356 delayed positive test results that have been added to total cases. <strong>Total cases</strong> increased by 447, but <strong>daily new cases</strong> only increased by 91.</p>
           </div>
         </div>
       </div>
